--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <h1>Selecciona tu opción</h1>
   <div class="container">
     <a class="image-button" href="https://bintelligence-gt.github.io/creador_plantilla/">
-      <img src="https://via.placeholder.com/200x200/3D8F98/ffffff?text=Plantilla" alt="Plantilla">
+      <img src=maps.png>
     </a>
     <a class="image-button" href="https://efficaex.com/">
       <img src="https://via.placeholder.com/200x200/0A2A49/ffffff?text=Efficaex" alt="Efficaex">
