--- a/index.html
+++ b/index.html
@@ -3,73 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enlaces con Imágenes</title>
+  <title>Mapa de Coordenadas</title>
+  
+  <!-- Estilos de Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+  
   <style>
-    body {
+    /* Asegúrate que el mapa tenga altura visible */
+    html, body {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://drive.google.com/open?id=1h0RLph0j-wT63rQ0UZxSqGLYcYdtdCMx/') no-repeat center center fixed;
-      background-size: cover;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      height: 100%;
     }
-
-    h1 {
-      color: #0A2A49;
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 15px 30px;
-      border-radius: 12px;
-      margin-bottom: 30px;
-      font-size: 28px;
-    }
-
-    .container {
-      display: flex;
-      gap: 30px;
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 30px;
-      border-radius: 20px;
-    }
-
-    .image-button {
-      width: 200px;
-      height: 200px;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-      text-decoration: none;
-    }
-
-    .image-button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    .image-button img {
+    #map {
       width: 100%;
       height: 100%;
-      object-fit: cover;
     }
   </style>
 </head>
 <body>
-  <h1>Selecciona tu opción</h1>
-  <div class="container">
-    <a class="image-button" href="https://bintelligence-gt.github.io/creador_plantilla/">
-      <img src=maps.png>
-    </a>
-    <a class="image-button" href="https://efficaex.com/">
-      <img src=csv.png>
-    </a>
-    <a class="image-button" href="https://www.cargoexpreso.com/">
-      <img src="https://via.placeholder.com/200x200/28798C/ffffff?text=Cargo+Expreso" alt="Cargo Expreso">
-    </a>
-  </div>
+  <div id="map"></div>
+
+  <!-- Script de Leaflet -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-1A4e3uLxB7hUKrHnEfx2evoX+gANcX4lO96+Gk0tEI4="
+    crossorigin=""></script>
+  
+  <script>
+    // Coordenadas
+    const puntos = [
+      { lat: 14.917459, lng: -91.443257 },
+      { lat: 14.379325, lng: -90.287373 },
+      { lat: 14.497494, lng: -89.649169 },
+      { lat: 14.13708,  lng: -90.009023 },
+      { lat: 14.9627361, lng: -90.4902153 }
+    ];
+
+    // Crear el mapa
+    const map = L.map('map').setView([puntos[0].lat, puntos[0].lng], 8);
+
+    // Capa base
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '© OpenStreetMap contributors',
+      maxZoom: 18,
+    }).addTo(map);
+
+    // Agregar puntos
+    puntos.forEach((p, i) => {
+      L.marker([p.lat, p.lng])
+        .addTo(map)
+        .bindPopup(`<b>Punto ${i + 1}</b><br>Lat: ${p.lat}<br>Lng: ${p.lng}`);
+    });
+
+    // Ajustar zoom para ver todos
+    const group = L.featureGroup(puntos.map(p => L.marker([p.lat, p.lng])));
+    map.fitBounds(group.getBounds());
+  </script>
 </body>
 </html>
+
