--- a/index.html
+++ b/index.html
@@ -4,61 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mapa de Coordenadas</title>
-  
-  <!-- Estilos de Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""/>
-  
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
   <style>
-    /* Asegúrate que el mapa tenga altura visible */
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
-    #map {
-      width: 100%;
-      height: 100%;
-    }
+    html, body { height: 100%; margin: 0; padding: 0; }
+    #map { width: 100%; height: 100%; }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <!-- Script de Leaflet -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-1A4e3uLxB7hUKrHnEfx2evoX+gANcX4lO96+Gk0tEI4="
-    crossorigin=""></script>
-  
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   <script>
-    // Coordenadas
     const puntos = [
-      { lat: 14.917459, lng: -91.443257 },
-      { lat: 14.379325, lng: -90.287373 },
-      { lat: 14.497494, lng: -89.649169 },
-      { lat: 14.13708,  lng: -90.009023 },
-      { lat: 14.9627361, lng: -90.4902153 }
+      [14.917459, -91.443257],
+      [14.379325, -90.287373],
+      [14.497494, -89.649169],
+      [14.13708,  -90.009023],
+      [14.9627361, -90.4902153]
     ];
 
-    // Crear el mapa
-    const map = L.map('map').setView([puntos[0].lat, puntos[0].lng], 8);
+    const map = L.map('map').setView(puntos[0], 8);
 
-    // Capa base
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '© OpenStreetMap contributors',
-      maxZoom: 18,
+      maxZoom: 18
     }).addTo(map);
 
-    // Agregar puntos
-    puntos.forEach((p, i) => {
-      L.marker([p.lat, p.lng])
-        .addTo(map)
-        .bindPopup(`<b>Punto ${i + 1}</b><br>Lat: ${p.lat}<br>Lng: ${p.lng}`);
-    });
+    const markers = puntos.map((p, i) => 
+      L.marker(p).bindPopup(`<b>Punto ${i + 1}</b><br>Lat: ${p[0]}<br>Lng: ${p[1]}`)
+    );
 
-    // Ajustar zoom para ver todos
-    const group = L.featureGroup(puntos.map(p => L.marker([p.lat, p.lng])));
+    markers.forEach(m => m.addTo(map));
+
+    const group = L.featureGroup(markers);
     map.fitBounds(group.getBounds());
   </script>
 </body>
